--- a/projects/CSimple/legals/test.4
+++ b/projects/CSimple/legals/test.4
@@ -13,6 +13,10 @@ procedure compare(numberOne, numberTwo  : integer) return integer
     if(numberOne > numberTwo)
     { 
         ret = 1; 
+        ret = 1; 
+        ret = 1; 
+        ret = 1; 
+        ret = 1; 
     }
     else 
     {
