--- a/projects/CSimple/legals/test.2
+++ b/projects/CSimple/legals/test.2
@@ -18,6 +18,6 @@ procedure Main() return integer
 	x = "this is a string['5']\n";
 	x = "this is \"; x = "invalid";
 	x[1] = 'h';
-        return x[7+1];
+        return x;
 }
 
