--- a/tests/test4.lang
+++ b/tests/test4.lang
@@ -1,7 +1,7 @@
 procedure Main() return char
 {
-    var a : char;
-    var b : integer;
+    var a : integer;
+    var b : char;
 
     a = 2;
     b = 'd';
